# ai-lending

./: .gitignore  pyproject.toml
agent/: api.py  graph.py  loop.py  run.py
agent/app/: agent.py
agent/app/backends/: sandboxed_shell.py
agent/app/clients/: langfuse.py  mem0.py  vllm.py
agent/app/middleware/: advisor_escalation.py  compaction.py  episode_injector.py  guardrails.py  overflow_recovery.py  results_guard.py  telemetry.py  time_awareness.py
agent/app/models/: __init__.py  episode.py  state.py
agent/app/prompts/: __init__.py  advisor.py  system.py
agent/app/prompts/gepa/: __init__.py
agent/app/tools/: __init__.py  advisor_consult.py  code_executor.py  filesystem.py  long_term_memory.py  sensitivity_model.py
agent/app/utils/: token_counter.py
agent/evaluator/: evaluate_episode.py  pnl_formula.py  score_runner.py
configs/: base.yaml
configs/treatments/: treatment_1.yaml  treatment_2.yaml  treatment_3.yaml  treatment_4.yaml  treatment_5.yaml  treatment_6.yaml  treatment_7.yaml
data_pipeline/: build_features_only.py  build_splits.py  sensitivity_model.py  survival_targets.py
docs/: LITERATURE_REVIEW.md  RESEARCH_STRATEGY.md  infra_notes.md
notebooks/: 04_t0_analysis.ipynb
results/pilots/: README.md
results/pilots/treatment_0/episode_0000/: build_model.py  check_acceptance.py  check_cols.py  check_data.py  check_dir.py  check_nulls.py  check_observed_time.py  check_paths.py  check_pnl.py  check_pnl_detail.py  check_root.py  check_sens2.py  check_sens_model.py  explore.py  (+49 more)
scripts/: monitor_run.py  start_models.sh  trace_analysis.py
(+136 files in other folders)
