[project]
name = "ai-lending"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.3",
    "langfuse>=4.13.0",
    "langgraph>=1.2.8",
    "lifelines>=0.30.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]
