[project]
name = "ai-lending"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "click>=8.4.2",
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.3",
    "langfuse>=4.13.0",
    "langgraph>=1.2.8",
    "lifelines>=0.30.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pycox>=0.3.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "torchsurv>=0.2.0",
    "xgboost>=3.3.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
